--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                     <img src="./img/fotos/Intime.png" alt="Projeto Intime">
                 </a>
                 <div class="descricao">
-                    <h4>Intime ⏰</h4>
-                    <p>Site desenvolvido para gerenciamento de tempo para equipes que utilizam metodologias ágeis para realizar tarefas. Esse site oferece a possibilidade de realizar a gestão de tempo de forma dinâmica e concentrada.</p>
+                    <h4>Library ⏰</h4>
+                    <p>Site desenvolvido para gerenciamento de Livros de uma biblioteca.</p>
                     <ul class="tecnologias">
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>JavaScript</li>
+                        <li>JavaWeb</li>
                     </ul>
                     <div class="links">
                         <div class="link-externo">
