--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     </ul>
                     <div class="links">
                         <div class="link-externo">
-                            <a href="https://github.com/Raphaelpimenta/Intime.github.io" target="_blank">Code</a>
+                            <a href="" target="_blank">Code</a>
                             <img src="./img/icones/github-menor.png" alt="Icone github">
                         </div>
                         <div class="link-externo">
-                            <a href="https://raphaelpimenta.github.io/Intime.github.io/" target="_blank">Live Demo</a>
+                            <a href="" target="_blank">Live Demo</a>
                             <img src="./img/icones/link-externo.png" alt="Link externo">
                         </div>
                     </div>
