change the project

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </a>
                 <div class="descricao">
                     <h4>Library ⏰</h4>
-                    <p>Site desenvolvido para gerenciamento de Livros de uma biblioteca.</p>
+                    <p>Site desenvolvido para gerenciamento de Livros de uma biblioteca. (Imagem ilustrativa)</p>
                     <ul class="tecnologias">
                         <li>HTML</li>
                         <li>CSS</li>
