change the introduction

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <main class="introducao-bg">
+
         <section class="introducao container" id="inicio">
             <h1>Engenheiro de Software 👋</h1>
             <p>Como engenheiro de software, seu código não apenas fala, ele muda o mundo. Continue inovando, porque cada linha de código que você escreve é um passo em direção ao futuro.</p>
@@ -38,32 +39,33 @@
                     <img src="./img/icones/github.png" alt="github">
                 </a>
             </div>
-
-            <article class="container skills">
-                <p>Tech skills</p>
-                <ul class="tech-icones">
-                    <li>
-                        <img src="./img/icones/java.png" alt="Icone React Js" title="React">
-                    </li>
-                    <li>
-                        <img src="./img/icones/html.png" alt="Icone HTML" title="HTML">
-                    </li>
-                    <li>
-                        <img src="./img/icones/css.png" alt="Icone CSS" title="CSS">
-                    </li>
-                    <li>
-                        <img src="./img/icones/sql.png" alt="Icone JS" title="JavaScript">
-                    </li>
-
-                    <li>
-                        <img src="./img/icones/spring.png" alt="Icone Figma" title="Figma">
-                    </li>
-                    <li>
-                        <img src="./img/icones/git.png" alt="Icone Git" title="Git">
-                    </li>
-                </ul>
-            </article>
         </section>
+
+        <section class="introducao2 p"><p>Tech skills</p></section>
+
+        <article class="container skills">
+            <ul class="tech-icones">
+                <li>
+                    <img src="./img/icones/java.png" alt="Icone React Js" title="React">
+                </li>
+                <li>
+                    <img src="./img/icones/html.png" alt="Icone HTML" title="HTML">
+                </li>
+                <li>
+                    <img src="./img/icones/css.png" alt="Icone CSS" title="CSS">
+                </li>
+                <li>
+                    <img src="./img/icones/sql.png" alt="Icone JS" title="JavaScript">
+                </li>
+
+                <li>
+                    <img src="./img/icones/spring.png" alt="Icone Figma" title="Figma">
+                </li>
+                <li>
+                    <img src="./img/icones/git.png" alt="Icone Git" title="Git">
+                </li>
+            </ul>
+        </article>
     </main>
 
 
