chaged the display home and put curriculum

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Portifolio">
+    <meta name="Author" content="Jorge Maykon">
     <title>Jorge Maykon | Software Engineer</title>
     <link rel="icon" href="./img/icones/desenvolvimento-web.png" type="image/svg+xml">
     <link rel="stylesheet" href="./css/style.css">
@@ -38,12 +39,15 @@
                 <a href="https://github.com/jorge-maykon" target="_blank">
                     <img src="./img/icones/github.png" alt="github">
                 </a>
+                <a href="#" id="downloadLink"> 
+                    <img src="./img/icones/cur1.png" alt="curriculo">
+                </a>
             </div>
         </section>
 
-        <section class="introducao2 p"><p>Tech skills</p></section>
+        <section class="introducao2 p"><p><i>Hard kills</i></p></section>
 
-        <article class="container skills">
+        <article class="container2 skills">
             <ul class="tech-icones">
                 <li>
                     <img src="./img/icones/java.png" alt="Icone React Js" title="React">
@@ -153,7 +157,8 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="./js/script.js"></script>
-
+    <script type="module" src="./js/script.js">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
