change the header skills

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
+
+    <!-- <div id="popup" class="popup">
+        <div class="popup-content">
+            <span id="close">×</span>
+            <p>Este site ainda está em desenvolvimento. Obrigado pela sua paciência!</p>
+        </div>
+    </div> -->
+
     <header class="header-bg">
         <div class="header container">
             <a href="#" class="logo">Diggi_Tec</a>
-
-            <nav class="js-menu">
+            <nav class="js-menu ">
                 <button id="btn-mobile"><span id="hamburguer"></span></button>
                 <ul class="header-menu ativaLink">
                     <li><a href="#inicio" class="ativado">Home</a></li>
@@ -23,12 +30,10 @@
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
-
         </div>
     </header>
 
     <main class="introducao-bg">
-
         <section class="introducao container" id="inicio">
             <h1>Engenheiro de Software 👋</h1>
             <p>Como engenheiro de software, seu código não apenas fala, ele muda o mundo. Continue inovando, porque cada linha de código que você escreve é um passo em direção ao futuro.</p>
@@ -39,42 +44,71 @@
                 <a href="https://github.com/jorge-maykon" target="_blank">
                     <img src="./img/icones/github.png" alt="github">
                 </a>
-                <a href="#" id="downloadLink"> 
+                <a href="#" id="downloadLink" target="_blank"> 
                     <img src="./img/icones/cur1.png" alt="curriculo">
                 </a>
             </div>
         </section>
 
-        <section class="introducao2 p"><p><i>Hard kills</i></p></section>
-
-        <article class="container2 skills">
+        <section class="introducao p container"><h2><i>Hard kills</i></h2>
+            <article class="skills container">
             <ul class="tech-icones">
                 <li>
-                    <img src="./img/icones/java.png" alt="Icone React Js" title="React">
+                    <div class="tech-item">
+                        <img src="./img/icones/java.png" alt="Icone Java" title="Java">
+                        <p>JAVA</p>
+                    </div>
                 </li>
+                
                 <li>
-                    <img src="./img/icones/html.png" alt="Icone HTML" title="HTML">
-                </li>
-                <li>
-                    <img src="./img/icones/css.png" alt="Icone CSS" title="CSS">
-                </li>
-                <li>
-                    <img src="./img/icones/sql.png" alt="Icone JS" title="JavaScript">
+                    <div class="tech-item">
+                        <img src="./img/icones/spring.png" alt="Icone Spring" title="Spring">
+                        <p>Spring</p>
+                    </div>
                 </li>
 
                 <li>
-                    <img src="./img/icones/spring.png" alt="Icone Figma" title="Figma">
+                    <div class="tech-item">
+                        <img src="./img/icones/html.png" alt="Icone HTML5" title="HTML5">
+                        <p>HTML5</p>
+                    </div>
                 </li>
+
                 <li>
-                    <img src="./img/icones/git.png" alt="Icone Git" title="Git">
+                    <div class="tech-item">
+                        <img src="./img/icones/css1.png" alt="Icone CSS3" title="CSS3">
+                        <p>CSS3
+                        </p>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="tech-item">
+                        <img src="./img/icones/bootstrap.png" alt="Icone BootStrap" title="BootStrap">
+                        <p>BootStrap</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="tech-item">
+                        <img src="./img/icones/mysql.png" alt="Icone MySQL" title="MySQL">
+                        <p>MySQL</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="tech-item">
+                        <img src="./img/icones/server.png" alt="Icone server" title="server">
+                        <p>SQLServer</p>
+                    </div>
                 </li>
             </ul>
         </article>
+    </section>
+
     </main>
 
-
-
-    <section class="container">
+    <section class="container ">
         <div class="sobre" id="sobre">
             <img src="./img/fotos/me.jpg" alt="Minha foto">
             <div class="conteudo">
