chage de position of hard skills

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="introducao p container"><h2><i>Hard kills</i></h2>
+        <section class="introducao container"><h2><i>Hard kills</i></h2>
             <article class="skills container">
             <ul class="tech-icones">
                 <li>
