litle change about wpp number

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <img src="./img/icones/whatsapp.png" alt="Icone whatsapp">
                     <div class="contato-texto">
                         <h4>Whatsapp</h4>
-                        <a href="https://wa.me/+5511975520281" target="_blank">+55 61 98217-8327</a>
+                        <a href="#" target="_blank">+55 61 98217-8327</a>
                     </div>
                 </li>
                 <li class="contato">
