change float img

--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
     </section>
 
     </main>
-
     <section class="container ">
         <div class="sobre" id="sobre">
-            <img src="./img/fotos/me.jpg" alt="Minha foto">
+            <img src="./img/fotos/me.jpg" alt="Minha foto" class="img1">
             <div class="conteudo">
                 <span class="sub-titulo">Sobre mim</span>
                 <h3 class="titulo">Um desenvolvedor em desenvolvimento. 💻</h3>
