Change the logo and navbar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
     <header class="header-bg">
         <div class="header container">
+            <img src="img/icones/logopequenalobopequena.png" alt="foto-lo">
             <a href="#" class="logo">Diggi_Tec</a>
-            <nav class="js-menu ">
+            <nav class="js-menu header">
                 <button id="btn-mobile"><span id="hamburguer"></span></button>
                 <ul class="header-menu ativaLink">
                     <li><a href="#inicio" class="ativado">Home</a></li>
@@ -113,11 +114,12 @@
             <div class="conteudo">
                 <span class="sub-titulo">Sobre mim</span>
                 <h3 class="titulo">Um desenvolvedor em desenvolvimento. 💻</h3>
-                <p>Sou um desenvolvedor full-stack em ascensão, buscando me desenvolver como engenheiro de software. Sou movido pela paixão pela tecnologia e pela criação de soluções digitais completas.</p>
+                <p>Sou um desenvolvedor full-stack em ascensão, buscando me desenvolver como engenheiro de software. Sou movido pela paixão pela tecnologia e pela criação de soluções digitais completas.
+                Minha jornada no desenvolvimento full-stack começou recentemente, mas estou totalmente comprometido em aprimorar minhas habilidades e conhecimentos. Tenho uma base sólida em JAVA, Banco de Dados, Spring, além de experiência com BootStrap e Versionamento. Já desenvolvi alguns projetos pessoais para praticar e consolidar meu aprendizado, tanto o front-end quanto o back-end.</p>
 
-                <p>Minha jornada no desenvolvimento full-stack começou recentemente, mas estou totalmente comprometido em aprimorar minhas habilidades e conhecimentos. Tenho uma base sólida em <span>JAVA</span>, <span>Banco de Dados</span>, <span>Spring</span>, além de experiência com <span>BootStrap</span> e <span>Versionamento</span>. Já desenvolvi alguns projetos pessoais para praticar e consolidar meu aprendizado, tanto o front-end quanto o back-end.</p>
-
-                <p>Tenho uma abordagem curiosa e inovadora para resolver problemas e estou sempre aberto a feedbacks construtivos para melhorar minhas soluções. Como engenheiro de software em formação, estou ansioso para enfrentar desafios mais complexos e contribuir para a evolução da tecnologia.</p>
+                <p>Além das habilidades técnicas, reconheço a importância das soft skills no ambiente de trabalho. Acredito que a comunicação eficaz, o trabalho em equipe e a resolução de problemas são tão importantes quanto o conhecimento técnico. Tenho uma abordagem curiosa e inovadora para resolver problemas e estou sempre aberto a feedbacks construtivos para melhorar minhas soluções. A flexibilidade, a resiliência e a empatia são qualidades que valorizo e procuro desenvolver constantemente.
+                No meu dia a dia, utilizo ferramentas como GitHub para colaboração em projetos de código, Trello para gerenciamento de tarefas e projetos, e Slack/Discord para comunicação com equipes e comunidades de desenvolvedores. Essas ferramentas não apenas aumentam minha produtividade, mas também me ajudam a aprimorar minhas soft skills, como trabalho em equipe, comunicação eficaz e gerenciamento de tempo.</p>
+                <p>Como engenheiro de software em formação, estou ansioso para enfrentar desafios mais complexos e contribuir para a evolução da tecnologia. Acredito que a combinação de habilidades técnicas e soft skills, juntamente com o uso eficaz de ferramentas de colaboração e gerenciamento de projetos, me permitirá fazer contribuições significativas e inovadoras na minha carreira.</p>
             </div>
         </div>
     </section>
