Try to change navbar position

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div> -->
 
     <header class="header-bg">
-        <div class="header container">
-            <img src="img/icones/logopequenalobopequena.png" alt="foto-lo">
+        <div class="header containernav">
+            <img src="img/icones/logopequenalobopequena.png" alt="foto-logo">
             <a href="#" class="logo">Diggi_Tec</a>
             <nav class="js-menu header">
                 <button id="btn-mobile"><span id="hamburguer"></span></button>
