--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </div> -->
 
     <header class="header-bg">
-        <div class="header containernav">
-            <img src="img/icones/logopequenalobopequena.png" alt="foto-logo">
-            <a href="#" class="logo">Diggi_Tec</a>
+        <div class="header container">
+            <div class="header-logo container-logo">
+                <img src="img/icones/logopequenalobopequena.png" alt="foto-logo">
+                <a href="#" class="logo">Diggi_Tec</a>
+            </div>
             <nav class="js-menu header">
                 <button id="btn-mobile"><span id="hamburguer"></span></button>
                 <ul class="header-menu ativaLink">
