span for the manutention

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-    <!-- <div id="popup" class="popup">
+    <div id="popup" class="popup">
         <div class="popup-content">
             <span id="close">×</span>
             <p>Este site ainda está em desenvolvimento. Obrigado pela sua paciência!</p>
         </div>
-    </div> -->
+    </div>
 
     <header class="header-bg">
         <div class="header container">
