about projects and little change in header

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-    <div id="popup" class="popup">
+    <!-- <div id="popup" class="popup">
         <div class="popup-content">
             <span id="close">×</span>
             <p>Este site ainda está em desenvolvimento. Obrigado pela sua paciência!</p>
         </div>
-    </div>
+    </div> -->
 
     <header class="header-bg">
         <div class="header container">
@@ -162,7 +162,7 @@
     <footer id="contato">
         <div class="footer container">
             <span class="sub-titulo">Contato</span>
-            <h3 class="titulo">Entre em contato comigo! 👇</h3>
+            <h3 class="titulo">Entre em contato e para mais informações.</h3>
             <ul class="contato-meios">
                 <li class="contato">
                     <img src="./img/icones/whatsapp.png" alt="Icone whatsapp">
