include the part of projects

--- a/index.html
+++ b/index.html
@@ -126,35 +126,91 @@
         </div>
     </section>
 
-    <section class="projetos-bg">
-        <div class="projetos container">
-            <span class="sub-titulo">Projetos</span>
-            <h3 class="titulo" id="projetos">🧩</h3>
-
-            <section class="projeto-conteudo">
-                <a href="https://raphaelpimenta.github.io/Intime.github.io/" target="_blank" class="projeto-img">
-                    <img src="./img/fotos/Intime.png" alt="Projeto Intime">
-                </a>
-                <div class="descricao">
-                    <h4>Library ⏰</h4>
-                    <p>Site desenvolvido para gerenciamento de Livros de uma biblioteca. (Imagem ilustrativa)</p>
-                    <ul class="tecnologias">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaWeb</li>
-                    </ul>
-                    <div class="links">
-                        <div class="link-externo">
-                            <a href="" target="_blank">Code</a>
-                            <img src="./img/icones/github-menor.png" alt="Icone github">
-                        </div>
-                        <div class="link-externo">
-                            <a href="" target="_blank">Live Demo</a>
-                            <img src="./img/icones/link-externo.png" alt="Link externo">
-                        </div>
-                    </div>
-                </div>
-            </section>
+    <section id="projects" class="projects sec-pad">
+        <div class="main-container">
+          <h2 class="heading heading-sec heading-sec__mb-bg">
+            <span class="heading-sec__main">Projects</span>
+            <span class="heading-sec__sub">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
+              tempora explicabo quae quod deserunt eius sapiente
+            </span>
+          </h2>
+  
+          <div class="projects__content">
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+              <div class="projects__row-content">
+                <h3 class="projects__row-content-title">Project 1</h3>
+                <p class="projects__row-content-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                  facilis tempora, explicabo quae quod deserunt eius sapiente
+                  praesentium.
+                </p>
+                <a
+                  href="./project-1.html"
+                  class="btn btn--med btn--theme dynamicBgClr"
+                  target="_blank"
+                  >Case Study</a
+                >
+              </div>
+            </div>
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+              <div class="projects__row-content">
+                <h3 class="projects__row-content-title">Project 2</h3>
+                <p class="projects__row-content-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                  facilis tempora, explicabo quae quod deserunt eius sapiente
+                  praesentium.
+                </p>
+                <a
+                  href="./project-2.html"
+                  class="btn btn--med btn--theme dynamicBgClr"
+                  target="_blank"
+                  >Case Study</a>
+              </div>
+            </div>
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
+              <div class="projects__row-content">
+                <h3 class="projects__row-content-title">Project 3</h3>
+                <p class="projects__row-content-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                  facilis tempora, explicabo quae quod deserunt eius sapiente
+                  praesentium.
+                </p>
+                <a
+                  href="./project-3.html"
+                  class="btn btn--med btn--theme dynamicBgClr"
+                  target="_blank"
+                  >Case Study</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
         </div>
     </section>
