new items to project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="./img/icones/desenvolvimento-web.png" type="image/svg+xml">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"  rel="stylesheet"/>
+
+    <!-- Revisa fontes se necessarias -->
+
 </head>
 <body>
 
@@ -140,7 +145,7 @@
             <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="img/fotos/project-mockup-example.jpeg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -164,7 +169,7 @@
             <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="img/fotos/project-mockup-example.jpeg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -187,7 +192,7 @@
             <div class="projects__row">
               <div class="projects__row-img-cont">
                 <img
-                  src="./assets/jpeg/project-mockup-example.jpeg"
+                  src="img/fotos/project-mockup-example.jpeg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
